force-app/main/default/objects/LogAcesso__c/LogAcesso__c.object-meta.xml
<CustomObject>
    <label>Log de Acesso</label>
    <nameField>
        <displayFormat>LA{000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Acesso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>