force-app/main/default/objects/LogAcesso__c/fields/IdRegistro__c.field-meta.xml
<CustomField>
    <fullName>IdRegistro__c</fullName>
    <label>Identificador</label>
    <length>40</length>
    <type>Text</type>
</CustomField>