force-app/main/default/objects/LogAcesso__c/fields/ObjetoAPI__c.field-meta.xml
<CustomField>
    <fullName>ObjetoAPI__c</fullName>
    <inlineHelpText>Nome de API do objeto</inlineHelpText>
    <label>Objeto API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>