force-app/main/default/objects/LogAcesso__c/listViews/AcessoUsuario.listView-meta.xml
<ListView>
    <fullName>AcessoUsuario</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IdRegistro__c</columns>
    <columns>Objeto__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ObjetoAPI__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Paulo Vitor</value>
    </filters>
    <label>Log de Acesso por Usuário</label>
</ListView>