force-app/main/default/objects/LogAcesso__c/listViews/ReportLogAcesso.listView-meta.xml
<ListView>
    <fullName>ReportLogAcesso</fullName>
    <booleanFilter>(1 OR 2)</booleanFilter>
    <columns>NAME</columns>
    <columns>Objeto__c</columns>
    <columns>IdRegistro__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Objeto__c</field>
        <operation>equals</operation>
        <value>Relatório</value>
    </filters>
    <filters>
        <field>Objeto__c</field>
        <operation>equals</operation>
        <value>Report</value>
    </filters>
    <label>Relatório</label>
</ListView>